# Cpp-course-hws

task1/: main.c
task2/: file.txt  main.c
task3/: CMakeLists.txt  rational.cpp  rational.h
task4/: CMakeLists.txt  a.cpp  format.cpp  format.h
task5/: CMakeLists.txt  a.cpp  format.cpp  format.h  lazy_string.cpp
task6/: CMakeLists.txt  lazy_string.cpp  lazy_string.h
task7/: a.cpp  lazy_string.cpp
