cmake_minimum_required(VERSION 3.3)

set(GCC_COVERAGE_COMPILE_FLAGS, "-std=c++11")
set(GCC_COVERAGE_LINK_FLAGS, "")

set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
set( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )

set(HEADERS format.h)
set(SOURCES format.cpp)
add_library(format ${SOURCES} ${HEADERS})
install (TARGETS format DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
install (FILES format.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
install (FILES format.cpp DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
